--- a/servletSite/WebContent/05-01.login_get.html
+++ b/servletSite/WebContent/05-01.login_get.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<h1>로그인[GET]</h1>
+<h1>로그인[POST]</h1>
 <hr/>
 <!-- 
  요청시 전송되는 데이타를 묶어주는 단위
@@ -14,7 +14,7 @@
  action:요청할 URL(서블릿URL)
  method:요청방법
  -->
-<form action="get_login.do" method="get">
+<form action="get_login.do" method="post">
 	아이디:<input type="text" name="id"><br/>
 	패에쓰:<input type="password" name="pass"><br/><br/>
 	<!-- 
