--- a/servletSite/WebContent/05-03.form.html
+++ b/servletSite/WebContent/05-03.form.html
@@ -36,9 +36,9 @@
 			<tr>
 				<th bgcolor="44ff44"><font size="2">성별</font></th>
 				<td bgcolor="white" width="300">
-				<input type="radio" name="gender" value="M">
+				<input type="radio" name="gender" value="M" checked="checked">
 				<font size="2">남자</font> 
-				<input type="radio" name="gender" value="F" checked="checked">
+				<input type="radio" name="gender" value="F" >
 				<font size="2">여자</font>
 				</td>
 			</tr>
@@ -50,6 +50,8 @@
 						<option value="주부">주부</option>
 						<option value="회사원">회사원</option>
 						<option value="사장">사장</option>
+						<option value="가수">가수</option>
+						<option value="유튜버">유튜버</option>
 						<option value="기타">기타</option>
 				</select>
 				</td>
@@ -57,11 +59,10 @@
 			<tr>
 				<th bgcolor="44ff44"><font size="2">취미</font></th>
 				<td bgcolor="white" width="300">
-				<input type="checkbox" name="hobby" checked="checked" value="낮잠">낮잠
-				<input type="checkbox" name="hobby" value="연애">연애
+				<input type="checkbox" name="hobby" checked="checked" value="컴퓨터">컴퓨터
+				<input type="checkbox" name="hobby" value="낮잠">낮잠
 				<input type="checkbox" name="hobby" value="운동">운동 
 				<input type="checkbox" name="hobby" value="사이클">사이클 
-				<input type="checkbox" name="hobby" value="기타">기타
 				</td>
 			</tr>
 			<tr>
