--- a/servletSite/WebContent/05-03.form.html
+++ b/servletSite/WebContent/05-03.form.html
@@ -62,7 +62,10 @@
 				<input type="checkbox" name="hobby" checked="checked" value="컴퓨터">컴퓨터
 				<input type="checkbox" name="hobby" value="낮잠">낮잠
 				<input type="checkbox" name="hobby" value="운동">운동 
-				<input type="checkbox" name="hobby" value="사이클">사이클 
+				<input type="checkbox" name="hobby" value="사이클">사이클 		
+				<input type="checkbox" name="hobby" value="집가기">집가기
+				<input type="checkbox" name="hobby" value="집에가기">집에가기 
+				<input type="checkbox" name="hobby" value="집에도착하기">집에도착하기
 				</td>
 			</tr>
 			<tr>
